--- a/src/app/plant-tile/plant-tile.component.css
+++ b/src/app/plant-tile/plant-tile.component.css
@@ -3,10 +3,12 @@
 }
 
 .plant-holder {
+    /* TODO add padding and use calc to adjust /height / width to make it fit */
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
+    background-color: var(--grass-light-green);
 }
 
 .result-common-name {
