trying to make the nav bar a dummy component that can accept other components for customization on different routes

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,7 @@
 
 .container {
   background-color:  var(--wood-brown);
-  height: calc(100vh - .5vh - 6em);
+  height: calc(100vh - var(--nav-bar--total-height));
 }
 
 .result-container {
