--- a/src/app/county-map/county-map.component.html
+++ b/src/app/county-map/county-map.component.html
@@ -1,3 +1,7 @@
-<article id="map-container" style="height: 100%;display: flex;justify-content: center; align-items: center; background-color: var(--grass-light-green);">
+<nav-bar>
+    fart
+    <!-- TODO insert with like ngcontent kinda vibe -->
+</nav-bar>
+<article id="map-container" class="map-container">
     <canvas #mapCanvas height="610" width="975" style="max-width: 100%;"></canvas>
 </article>
