--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
-<plant-search (filteredData)="updatePlantData($event)"></plant-search>
+<nav-bar>
+    <plant-search (filteredData)="updatePlantData($event)" style="width:100%"></plant-search>
+</nav-bar>
 
 <body class="container" id="container">
     <article class="result-container" id="gov-container">
