created a drop down that lists all counties with the state abbrev next to it

--- a/src/app/county-map/county-map.component.css
+++ b/src/app/county-map/county-map.component.css
@@ -5,3 +5,9 @@
     align-items: center;
     background-color: var(--grass-light-green);
 }
+
+.nav-bar__container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
