--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
     --wood-dark-brown: rgb(68, 51, 29);
     --grass-light-green: rgb(162, 192, 162);
     --nav-bar-height:6em;
+    --nav-bar--width-padding: .75vw;
     --nav-bar-padding: .5vh;
     --nav-bar--total-height: calc(var(--nav-bar-height) + var(--nav-bar-padding));
 }
