--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,12 +1,13 @@
 .container {
     top: 0;
     position: sticky;
-    padding-left: .75vw;
+    padding-left: var( --nav-bar--width-padding);
+    padding-right: var( --nav-bar--width-padding);
     display: flex;
     align-items: center;
     text-align: center;
     padding-top: var(--nav-bar-padding);
     height: var(--nav-bar-height);
-    width: calc(100% - .75vw);
+    width: calc(100% - 2 * var( --nav-bar--width-padding));
     background-color: var(--wood-brown);
 }
