further adjusted linter ruels

--- a/FrontEnd/src/app/plant-overview/plant-overview.component.html
+++ b/FrontEnd/src/app/plant-overview/plant-overview.component.html
@@ -1,5 +1,5 @@
 <article class="container">
-    @if(plant() != null){   
-        <pre class="text">{{plant() | json}}</pre>
+    @if(plant() !== null){
+    <pre class="text">{{plant() | json}}</pre>
     }
 </article>
