minor bug fix, todos for batching to be fixed on frontend as http.get doesnt do batching

--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <nav-bar>
-    <plant-search (filteredData)="updatePlantData($event)" style="width:100%"></plant-search>
+    <plant-search (filteredDataBatch)="updatePlantData($event)" (filterInProgress$)="clearData($event)" style="width:100%"></plant-search>
 </nav-bar>
 
 <body class="container" id="container">
