--- a/FrontEnd/src/app/plant-overview/plant-overview.component.css
+++ b/FrontEnd/src/app/plant-overview/plant-overview.component.css
@@ -6,6 +6,14 @@
     margin: 0;
 }
 
+h1{
+  margin: 0;
+}
+
+.header{
+  padding: 1em 0 1em 0;
+  text-align: center;
+}
 
 @supports (scrollbar-color: auto) {
   .container, .text {
