--- a/FrontEnd/src/app/plant-search/plant-search.component.html
+++ b/FrontEnd/src/app/plant-search/plant-search.component.html
@@ -10,15 +10,16 @@
                     <option [value]="option">{{ 'SORT_OPTIONS.' + option | uppercase | transloco}}</option>
                     }
                 </select>
-                <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector" class="selector"
-                    id="growthHabitSelector" #growthHabitSelector [disabled]="filterInProgress$ | async">
+                <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector"
+                    class="selector" id="growthHabitSelector" #growthHabitSelector
+                    [disabled]="filterInProgress$ | async">
                     @for (growthHabit of growthHabits; track $index) {
                     <option [value]="growthHabit">{{'GROWTH_HABITS.' + growthHabit| uppercase | transloco}}</option>
                     }
                 </select>
             </div>
             <button matIconButton class="sortOrderButton" id="sortOrderButton" (click)="toggleSortOptionDirection()">
-                <mat-icon>sort_by_alpha</mat-icon>
+                <mat-icon svgIcon="sort_by_alpha"></mat-icon>
             </button>
         </div>
     </div>
