--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -1,3 +1,27 @@
+@font-face {
+  font-family: 'Roboto';
+  src: url('assets/fonts/roboto/Roboto-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('assets/fonts/roboto/Roboto-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* You can add global styles to this file, and also import other style files */
 :root{
     --wood-brown: rgb(131, 100, 60);
@@ -12,4 +36,4 @@ body{
     margin: 0;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, 'Roboto', sans-serif; }
