no more angular material :)

--- a/FrontEnd/src/app/plant-search/plant-search.component.html
+++ b/FrontEnd/src/app/plant-search/plant-search.component.html
@@ -22,8 +22,8 @@
                     }
                 </select>
             </div>
-            <button matIconButton class="sortOrderButton" id="sortOrderButton" (click)="toggleSortOptionDirection()">
-                <mat-icon svgIcon="sort_by_alpha"></mat-icon>
+            <button class="sortOrderButton" id="sortOrderButton" (click)="toggleSortOptionDirection()">
+                <app-icon name="sort-alpha"></app-icon>
             </button>
         </div>
     </div>
