--- a/FrontEnd/src/app/pic-search-icon/pic-search-icon.component.html
+++ b/FrontEnd/src/app/pic-search-icon/pic-search-icon.component.html
@@ -1,4 +1,4 @@
 <div style="display: grid; grid: 1fr 1fr; cursor: pointer;">
-    <mat-icon class="icon photo" svgIcon="photo_size_select_actual"></mat-icon>
-    <mat-icon class="icon search" svgIcon="search"></mat-icon>
+    <app-icon class="icon picture" name="image"></app-icon>
+    <app-icon class="icon search" name="search"></app-icon>
 </div>
