--- a/FrontEnd/src/app/plant-tile/plant-tile.component.html
+++ b/FrontEnd/src/app/plant-tile/plant-tile.component.html
@@ -9,7 +9,7 @@
             id="plant-abbreviation">{{plant.acceptedSymbol}}</a>
 
         @if (plant.shadeTolerance !== null) {
-        <mat-icon class="shade-tolerance" [svgIcon]="iconName"></mat-icon>
+        <app-icon class="shade-tolerance" [name]="iconName"></app-icon>
         }
 
     </span>
@@ -41,7 +41,7 @@
         <pic-search-icon id="photo-icon-{{plant.acceptedSymbol}}" class="search-icon"
             (click)="openImageSearch(plant)"></pic-search-icon>
         <button class="info-btn" id="info-btn-{{plant.acceptedSymbol}}" (click)="openInfoPage()">
-            <mat-icon class="info-icon" svgIcon="question_mark"></mat-icon>
+            <app-icon class="info-icon" name="help"></app-icon>
         </button>
     </div>
 </section>
