faster search with quadtree / bounding box. using native geolocationCoordinates because it contains more info. calculating mostly accurate radius for quadtree and bounding box based on accuracy coords.

--- a/FrontEnd/src/app/plant-tile/plant-tile.component.html
+++ b/FrontEnd/src/app/plant-tile/plant-tile.component.html
@@ -38,8 +38,8 @@
     }
 
     <div class="last-row" id="last-row-{{plant.acceptedSymbol}}">
-        <pic-search-icon id="photo-icon-{{plant.acceptedSymbol}}" class="search-icon"
-            (click)="openImageSearch(plant)"></pic-search-icon>
+        <!-- <pic-search-icon id="photo-icon-{{plant.acceptedSymbol}}" class="search-icon"
+            (click)="openImageSearch(plant)"></pic-search-icon> -->
         <button class="info-btn" id="info-btn-{{plant.acceptedSymbol}}" (click)="openInfoPage()">
             <app-icon class="info-icon" name="help"></app-icon>
         </button>
