fixed some imports, some declarations, added the app shell properly complete with links to pages. added an about page for word-vomit

--- a/FrontEnd/src/app/plant-search/plant-search.component.html
+++ b/FrontEnd/src/app/plant-search/plant-search.component.html
@@ -1,22 +1,19 @@
 <section id="plant-search-container">
     <div class="search-container col">
-        <!-- TODO input label -->
         <input type="text" name="searchbar" id="searchbar" #searchBar (input)="search(searchBar.value)"
             [placeholder]="'SEARCHBAR_PLACEHOLDER' | transloco" class="searchbar">
         <div class="row">
             <div class="col">
-                <!-- TODO input label -->
+                <!-- TODO input label, separate sort / filter sections -->
                 <select name="sortSelector" id="sortSelector" #sortSelector class="selector"
                     (change)="changeSortOption(sortSelector.value)">
                     @for (option of sortOptions; track $index) {
                     <option [value]="option">{{ 'SORT_OPTIONS.' + option | uppercase | transloco}}</option>
                     }
                 </select>
-                <!-- TODO input label -->
 
                 <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector"
-                    class="selector" id="growthHabitSelector" #growthHabitSelector
-                    [disabled]="filterInProgress$ | async">
+                    class="selector" id="growthHabitSelector" #growthHabitSelector>
                     @for (growthHabit of growthHabits; track $index) {
                     <option [value]="growthHabit">{{'GROWTH_HABITS.' + growthHabit| uppercase | transloco}}</option>
                     }
