--- a/FrontEnd/src/app/plant-tile/plant-tile.component.html
+++ b/FrontEnd/src/app/plant-tile/plant-tile.component.html
@@ -46,3 +46,4 @@
     </div>
 </section>
 <!-- TODO each tile could have a flip side aka a toggle to show the native map region in the tile for this plant?   could lazy load this-->
+<!-- TODO use location svg and back arrow svg  -->
