--- a/FrontEnd/src/app/app-shell/app-shell.component.css
+++ b/FrontEnd/src/app/app-shell/app-shell.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /* make shell take full viewport height */
+    background-color: var(--wood-brown);
 }
 
 h2 {
@@ -10,19 +10,19 @@ h2 {
     padding: 0;
 }
 
-
 .nav-bar {
     position: static;
-    top: 0;
     padding-left: var(--nav-bar--width-padding);
     padding-right: var(--nav-bar--width-padding);
-    display: flex;
-    align-items: center;
-    text-align: center;
+    display: inline-flex;
+    justify-content: space-between;
     height: 40px;
     width: calc(100% - 2 * var(--nav-bar--width-padding));
-    background-color: var(--wood-brown);
     font-size: 1.2em;
     align-items: center;
-    text-align: center;
+}
+
+.link-container {
+    display: inline-flex;
+    gap: .5em
 }
