footer, better sorting on the search component

--- a/FrontEnd/src/app/about/about.component.html
+++ b/FrontEnd/src/app/about/about.component.html
@@ -3,4 +3,11 @@
     <p class="word-vomit">
         {{'ABOUT_COMPONENT.CONTENT' | transloco}}
     </p>
+
+    <!-- <h4 class="donate">Thank Me Here</h4> -->
 </section>
+
+<footer>
+    Natural Resources Conservation Service. PLANTS Database. United States Department of Agriculture. Accessed May 19,
+    2025, from <a href="https://plants.usda.gov">https://plants.usda.gov</a>.
+</footer>
