--- a/FrontEnd/src/app/plant-search/plant-search.component.css
+++ b/FrontEnd/src/app/plant-search/plant-search.component.css
@@ -46,7 +46,8 @@ h2 {
 
 .sortOrderButton {
     background-color: var(--grass-light-green);
-    color: var(--wood-dark-brown)
+    color: var(--wood-dark-brown);
+    width: 6ch;
 }
 
 .selector {
