--- a/FrontEnd/src/app/plant-tile/plant-tile.component.html
+++ b/FrontEnd/src/app/plant-tile/plant-tile.component.html
@@ -37,6 +37,11 @@
     </h4>
     }
 
+    <!-- <div class="plant-guide-container" id="plant-guide-container-{{plant.acceptedSymbol}}"> -->
+    <!-- TODO figure out how to ensure the guides actually exist -->
+    <!-- <a href="https://plants.usda.gov/DocumentLibrary/plantguide/pdf/pg_{{plant.acceptedSymbol}}.pdf">PDF</a> -->
+    <!-- </div> -->
+
     <div class="last-row" id="last-row-{{plant.acceptedSymbol}}">
         <!-- <pic-search-icon id="photo-icon-{{plant.acceptedSymbol}}" class="search-icon"
             (click)="openImageSearch(plant)"></pic-search-icon> -->
