--- a/FrontEnd/src/app/plant-search/plant-search.component.html
+++ b/FrontEnd/src/app/plant-search/plant-search.component.html
@@ -2,25 +2,24 @@
     <div class="search-container col">
         <input type="text" name="searchbar" id="searchbar" #searchBar (input)="search(searchBar.value)"
             [placeholder]="'SEARCHBAR_PLACEHOLDER' | transloco" class="searchbar">
-        <div class="row">
-            <div class="col">
-                <!-- TODO input label, separate sort / filter sections -->
-                <select name="sortSelector" id="sortSelector" #sortSelector class="selector"
-                    (change)="changeSortOption(sortSelector.value)">
-                    @for (option of sortOptions; track $index) {
-                    <option [value]="option">{{ 'SORT_OPTIONS.' + option | uppercase | transloco}}</option>
-                    }
-                </select>
-
-                <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector"
-                    class="selector" id="growthHabitSelector" #growthHabitSelector>
-                    @for (growthHabit of growthHabits; track $index) {
-                    <option [value]="growthHabit">{{'GROWTH_HABITS.' + growthHabit| uppercase | transloco}}</option>
-                    }
-                </select>
-            </div>
+        <div class="search-container row">
+            <select (change)="changeGrowthHabit(growthHabitSelector.value)" name="growthHabitSelector" class="selector"
+                id="growthHabitSelector" #growthHabitSelector>
+                @for (growthHabit of growthHabits; track $index) {
+                <option [value]="growthHabit">{{'GROWTH_HABITS.' + growthHabit| uppercase | transloco}}</option>
+                }
+            </select>
+        </div>
+        <div class="sort-container row">
+            <!-- TODO input label, separate sort / filter sections -->
+            <select name="sortSelector" id="sortSelector" #sortSelector class="selector"
+                (change)="changeSortOption(sortSelector.value)">
+                @for (option of sortOptions; track $index) {
+                <option [value]="option">{{ 'SORT_OPTIONS.' + option | uppercase | transloco}}</option>
+                }
+            </select>
             <button class="sortOrderButton" id="sortOrderButton" (click)="toggleSortOptionDirection()">
-                <app-icon name="sort-alpha"></app-icon>
+                {{sortOptionDirection}}
             </button>
         </div>
     </div>
